--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -2327,7 +2327,7 @@
     </p>
     <ul>
       <li>
-        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto">Options/Scribunto</a>
+        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
       </li>
       <li>
         (add) Improvements to Schnark's Javascript Timeline {contributed by Schnark}
