--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -187,7 +187,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_26" title="Dev/Command-line/Wikidata">Wikidata</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Site_meta.html" id="xolnki_27" title="Dev/Command-line/Site meta">Site meta</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Site_meta.html" id="xolnki_27" title="Dev/Command-line/Site meta" class="xowa-visited">Site meta</a>
             </li>
           </ul>
         </td>
