--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -526,7 +526,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_24" title="Options/Math">Math</a>
+              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_24" title="Options/Math" class="xowa-visited">Math</a>
             </td>
             <td>
               Math options (text called in an {{#math}} statement)
@@ -534,7 +534,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_25" title="Options/Scribunto">Scribunto</a>
+              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_25" title="Options/Scribunto" class="xowa-visited">Scribunto</a>
             </td>
             <td>
               Scribunto/Lua options (text called in an {{#invoke}} statement)
