--- a/home/wiki/Options/Scribunto.html
+++ b/home/wiki/Options/Scribunto.html
@@ -304,7 +304,7 @@ li.active a, li.active a:hover
               Enabled: <sup id="cite_ref-enabled_0-0" class="reference"><a href="#cite_note-enabled-0">[1]</a></sup>
             </td>
             <td>
-              <input xowa_prop="app.xtns.get('scribunto').enabled" type="checkbox" class='options_checkbox' id='xowa_prop_0' checked='checked'>
+              <input xowa_prop="app.xtns.get('scribunto').enabled" type="checkbox" class='options_checkbox' accesskey="e" id='xowa_prop_0' checked='checked'>
             </td>
           </tr>
           <tr>
