--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -1845,7 +1845,7 @@
         Module.Popups: Increase hover show time from 400 to 600 ms (affects number of accidental hovers while scrolling through page). See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_21" title="Options/Popups">Options/Popups</a>
       </li>
       <li>
-        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
+        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math" class="xowa-visited">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -2986,7 +2986,7 @@
         Gui.Url_bar: Do not lose history page position after editing page; EX:Open page -&gt; Scroll down -&gt; Click link -&gt; Edit -&gt; Click back -&gt; Position should be restored {detected by Schnark}.
       </li>
       <li>
-        Gui: Fix StackOverflow exception when auto_focus_id is " first_anchor" and exiting app on Help:Options page. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_76" title="Options/Scribunto">Options/Scribunto</a>
+        Gui: Fix StackOverflow exception when auto_focus_id is " first_anchor" and exiting app on Help:Options page. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_76" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
       </li>
       <li>
         Html: Remove exit link from upper left hand corner.
@@ -3754,7 +3754,7 @@
     </p>
     <ul>
       <li>
-        Scribunto: Add luaj as alternate lua engine. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_81" title="Options/Scribunto">Options/Scribunto</a>
+        Scribunto: Add luaj as alternate lua engine. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_81" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
       </li>
     </ul>
     <p>
