--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -1040,7 +1040,7 @@
         Javascript.Find: Allow search by backslash; EX:"C:\XOWA". See: <a href="http://xowa.org/home/wiki/App/Setup/Upgrading.html" id="xolnki_14" title="App/Setup/Upgrading">App/Setup/Upgrading</a>
       </li>
       <li>
-        API.Wikimedia: Add builder command for downloading wiki meta data. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Site_meta.html" id="xolnki_15" title="Dev/Command-line/Site meta">Dev/Command-line/Site_meta</a>
+        API.Wikimedia: Add builder command for downloading wiki meta data. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Site_meta.html" id="xolnki_15" title="Dev/Command-line/Site meta" class="xowa-visited">Dev/Command-line/Site_meta</a>
       </li>
     </ul>
     <p>
