--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,17 +82,17 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.7.3.1 features the following:
+      v3.7.4.1 features the following:
     </p>
     <ul>
       <li>
-        (Wiki) Publish 2016-07 French Wikipedia, Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews
+        (Wiki) Publish 2016-07 English Wikipedia
       </li>
       <li>
-        (PC) Fix Redirects not working for HTML databases
+        (Android) Add screen to change wiki location for Download Central
       </li>
       <li>
-        (PC) Fix minor Table of Contents issues for Wikitext / HTML databases
+        (PC) Fix automatic deletion of pagelinks file
       </li>
     </ul>
     <p>
