--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2016-07-25</b> English Wikipedia updated<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
+    </li>
+  </ul>
+
   <b>2016-06-19</b> English wikis updated<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
@@ -128,24 +134,6 @@
   <b>2016-03-20</b> English Wikipedia 2016-03 update released<br/>
   <ul>
     <li> <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_file_v2b.7z" class="external text" rel="nofollow">English Wikipedia update</a>
-    </li>
-  </ul>
-
-  <b>2016-02-21</b> English Wikipedia 2016-02 update released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia update</a>
-    </li>
-  </ul>
-
-  <b>2016-02-06</b> English wikis released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia update</a>
-    </li>
-  </ul>
-
-  <b>2016-01-17</b> Android app beta released<br/>
-  <ul>
-    <li> <a href="https://github.com/gnosygnu/xowa/issues/36" class="external text" rel="nofollow">Android app instructions</a>
     </li>
   </ul>
 </td>
